# xeus-ocaml

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  pixi.toml  xeus-ocamlConfig.cmake.in
.github/workflows/: ci.yml  main.yml  page.yml  release.yml
docs/: Doxyfile  README.md  environment.yml
docs/doxygen/: Doxyfile.in
docs/source/: conf.py  cpp_api.rst  dev-build-options.rst  index.rst  usage.rst
extension/: package.json  tsconfig.json  tsconfig.tsbuildinfo
extension/lib/: index.d.ts  index.js  index.js.map
extension/src/: commands-executor.ts  completer.ts  index.ts  inspector.ts  tooltip-listener.ts
extension/style/: base.css  index.css
include/: xcallbacks.hpp  xcompletion.hpp  xeus_ocaml_config.hpp  xinspection.hpp  xinterpreter.hpp  xocaml_engine.hpp
include/xeus-ocaml/: convert.hpp  xeus_ocaml_config.hpp  xinterpreter.hpp
notebooks/: demo.ipynb  xeus-ocaml.ipynb
ocaml/: dune  dune-project
ocaml/playground/: index.html  playground.css  playground.js  stdlib  xocaml.js
ocaml/src/protocol/: dune  protocol.ml
ocaml/src/xbundle/: dune  libs.txt  xbundle.ml
ocaml/src/xfs/: dune  xfs.ml  xfs.mli
ocaml/src/xlib/: dune  xlib.ml  xlib.mli
ocaml/src/xlibloader/: dune  xlibloader.ml  xlibloader.mli
ocaml/src/xlibloader/dynamic/: dune  gen_dynamic.ml
ocaml/src/xlibloader/dynamic/stdlib/: dune
ocaml/src/xlibloader/static/: dune  gen_static.ml
ocaml/src/xlibloader/static/stdlib/: dune
ocaml/src/xmerlin/: dune  stubs.js  xmerlin.ml  xmerlin.mli
ocaml/src/xmerlin/dynamic/: dune  gen_dynamic.ml
ocaml/src/xmerlin/dynamic/stdlib/: dune  stdlib.cmi  stdlib.cmt  stdlib.cmti  stdlib__Arg.cmi  stdlib__Arg.cmt  stdlib__Arg.cmti  stdlib__Array.cmi  stdlib__Array.cmt  stdlib__Array.cmti  stdlib__ArrayLabels.cmi  stdlib__ArrayLabels.cmt  stdlib__ArrayLabels.cmti  stdlib__Atomic.cmi  stdlib__Atomic.cmt  stdlib__Atomic.cmti  stdlib__Bigarray.cmi  stdlib__Bigarray.cmt  stdlib__Bigarray.cmti  stdlib__Bool.cmi  stdlib__Bool.cmt  stdlib__Bool.cmti  stdlib__Buffer.cmi  stdlib__Buffer.cmt  stdlib__Buffer.cmti  stdlib__Bytes.cmi  stdlib__Bytes.cmt  stdlib__Bytes.cmti  stdlib__BytesLabels.cmi  stdlib__BytesLabels.cmt  stdlib__BytesLabels.cmti  stdlib__Callback.cmi  stdlib__Callback.cmt  stdlib__Callback.cmti  stdlib__Char.cmi  stdlib__Char.cmt  stdlib__Char.cmti  stdlib__Complex.cmi  stdlib__Complex.cmt  stdlib__Complex.cmti  (+150 more)
ocaml/src/xmerlin/static/: dune
ocaml/src/xnetwork/: dune  xnetwork.ml  xnetwork.mli
ocaml/src/xocaml/: dune  xocaml.ml  xocaml.mli
ocaml/src/xtoplevel/: dune  library_loader.ml  library_loader.mli  network.ml  network.mli  util.ml  xtoplevel.ml  xtoplevel.mli
ocaml/src/xutil/: dune  xutil.cppo.ml  xutil.mli
ocaml/tests/: jest.config.js  jest.setup.js  package-lock.json  package.json  test-utils.js  toplevel.test.js  xmerlin.test.js
recipe/: build.sh  meta.yaml  recipe-dev.yaml  recipe-prod.yaml  recipe.yaml
scripts/: sync_version.py
share/jupyter/kernels/xocaml/: kernel.json.in
share/jupyter/labextensions/@jupyterlite/xeus-ocaml/: package.json
share/jupyter/labextensions/@jupyterlite/xeus-ocaml/static/: style.js  (+7 more)
share/jupyter/labextensions/@xeus-ocaml/commands-executor/: package.json
src/: main.cpp  main_emscripten_kernel.cpp  post.js  pre.js  xcompletion.cpp  xinspection.cpp  xinterpreter.cpp  xocaml_engine.cpp
src/ocaml/: dune
src/ocaml/_build/: .db  .digest-db  log
src/ocaml/_build/default/: kernel.ml  kernel.pp.ml
src/ocaml/_build/default/.dune/: configurator  configurator.v2
src/ocaml/_build/default/.js/toplevel/compiler-libs.bytecomp/: ocamlbytecomp.cma.js
src/ocaml/_build/default/.js/toplevel/compiler-libs.toplevel/: ocamltoplevel.cma.js
src/ocaml/_build/default/.js/toplevel/dynlink/: dynlink.cma.js
src/ocaml/_build/default/.js/toplevel/graphics/: graphics.cma.js
src/ocaml/_build/default/.js/toplevel/js_of_ocaml-compiler.dynlink/: js_of_ocaml_compiler_dynlink.cma.js
src/ocaml/_build/default/.js/toplevel/js_of_ocaml-compiler.runtime/: jsoo_runtime.cma.js
src/ocaml/_build/default/.js/toplevel/js_of_ocaml-lwt/: js_of_ocaml_lwt.cma.js
src/ocaml/_build/default/.js/toplevel/js_of_ocaml-lwt.graphics/: graphics_js.cma.js
src/ocaml/_build/default/.js/toplevel/js_of_ocaml-ppx/: ppx_js_rewriter.cma.js
src/ocaml/_build/default/.js/toplevel/js_of_ocaml-ppx.as-lib/: ppx_js.cma.js
src/ocaml/_build/default/.js/toplevel/js_of_ocaml-toplevel/: js_of_ocaml_toplevel.cma.js
src/ocaml/_build/default/.js/toplevel/lwt/: lwt.cma.js
src/ocaml/_build/default/.js/toplevel/menhirLib/: menhirLib.cma.js
src/ocaml/_build/default/.js/toplevel/ocaml-compiler-libs.common/: ocaml_common.cma.js
src/ocaml/_build/default/.js/toplevel/ocaml-compiler-libs.shadow/: ocaml_shadow.cma.js
src/ocaml/_build/default/.js/toplevel/ppx_derivers/: ppx_derivers.cma.js
src/ocaml/_build/default/.js/toplevel/ppxlib.ast/: ppxlib_ast.cma.js
src/ocaml/_build/default/.js/toplevel/ppxlib.print_diff/: ppxlib_print_diff.cma.js
src/ocaml/_build/default/.js/toplevel/ppxlib.stdppx/: stdppx.cma.js
src/ocaml/_build/default/.js/toplevel/ppxlib.traverse_builtins/: ppxlib_traverse_builtins.cma.js
src/ocaml/_build/default/.js/toplevel/sedlex/: sedlex.cma.js
src/ocaml/_build/default/.js/toplevel/sexplib0/: sexplib0.cma.js
src/ocaml/_build/default/.js/toplevel/stdlib/: std_exit.cmo.js  stdlib.cma.js
src/ocaml/_build/default/.js/toplevel/stdlib-shims/: stdlib_shims.cma.js
src/ocaml/_build/default/.js/toplevel/str/: str.cma.js
src/ocaml/_build/default/.js/toplevel/yojson/: yojson.cma.js
src/ocaml/_build/default/.kernel.eobjs/byte/: dune__exe__Kernel.cmi  dune__exe__Kernel.cmo  dune__exe__Kernel.cmt  dune__exe__Kernel.cmti
src/ocaml/_build/default/.kernel.eobjs/jsoo/: dune__exe__Kernel.cmo.js  kernel.bc.runtime.js
src/ocaml/_build/default/.merlin-conf/: exe-kernel
src/ocaml/_build/default/.ppx/c2d671a25528219606beb4ff9ab0b75f/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
test/: test_xocaml_kernel.py
(+2 files in other folders)
