(lang dune 3.14)

(name xocaml)

;; This stanza contains all the metadata and dependencies from your .opam file
(package
 (name xocaml) ; This should match the project name
 (version 0.1.0) ; You should add a version for your project
 (synopsis "Editor helper for completion, typing and source browsing for the web")
 (description
  "Merlin is an assistant for editing OCaml code. It aims to provide the features available in modern browsers: error reporting, auto completion, source browsing and much more.")
 (maintainers "davy@ik.me")
 (authors "Davy Cottet")
 (license "GPL-3.0-or-later") ; <-- IMPORTANT: Use SPDX identifier. "GNU" is ambiguous. Check the correct version.
 (homepage "https://github.com/davy39/xeus-ocaml")
 (bug_reports "https://github.com/davy39/xeus-ocaml/issues")
 (source (github davy39/xeus-ocaml)) ; A cleaner way to specify the dev-repo

 ;; This is the direct translation of your 'depends' field
 (depends
  (ocaml (>= 5.2))
  (dune (>= 3.0))
  merlin-lib
  (yojson (>= 1.6.0))
  (js_of_ocaml (>= 5.0.0))
  (js_of_ocaml-ppx (>= 5.0.0))
  (ppx_blob (>= 0.7.2))
  (ppx_deriving_yojson(>= 3.10.0))
  (js_of_ocaml-toplevel (>= 5.0.0))
  (js_of_ocaml-lwt (>= 6.2.0))
  (lwt_ppx (>= 2.1.0))
    (bos
   (>= 0.2.1))
  (cmdliner
   (>= 1.3.0))
   (ocamlgraph (>= 2.2.0))
))


