(executable
  (name kernel)
  (modes js)
  (libraries
    js_of_ocaml-compiler
    js_of_ocaml-toplevel
    js_of_ocaml-ppx
    lwt
    js_of_ocaml-lwt
    js_of_ocaml-lwt.graphics
    graphics
    str
    dynlink)
  (flags (:standard -rectypes -linkall))
  (preprocess (pps js_of_ocaml-ppx))
  (js_of_ocaml
    (flags
      (:standard
        --toplevel
        --opt 3
        --no-inline
        +base/runtime.js
        +toplevel.js
        +dynlink.js))))

(alias
  (name default)
  (deps kernel.bc.js))